--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -1,7 +1,11 @@
 <div class="full-screen-modal">
-  <button class="close-btn" mat-icon-button (click)="closeDialog()">
+  <app-reusable-button
+    className="close-btn"
+    [isIconButton]="true"
+    (buttonClick)="closeDialog()"
+  >
     <mat-icon>close</mat-icon>
-  </button>
+  </app-reusable-button>
 
   @if (featureFlagService.isFeatureEnabled('contactForm')) {
     <div class="form-wrapper">
@@ -14,120 +18,71 @@
 
       <form [formGroup]="contactForm" (ngSubmit)="submitForm()">
         <div class="name-fields-container">
-          <mat-form-field>
-            <mat-label>First name (optional)</mat-label>
-            <input matInput formControlName="firstName" />
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('firstName'))"
+            label="First name"
+            [optional]="true"
+            [errorMessages]="errorMessages"
+            [flexValue]="'1'"
+          ></app-reusable-form-field>
 
-            @if (isTouched('firstName')) {
-              <mat-error>
-                @if (hasError('firstName', 'textOnly')) {
-                  <span>{{ errorMessages.textOnly }}</span>
-                }
-              </mat-error>
-            }
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Last name</mat-label>
-            <input matInput formControlName="lastName" />
-
-            @if (isTouched('lastName')) {
-              <mat-error>
-                @if (hasError('lastName', 'required')) {
-                  <span>{{ errorMessages.required }}</span>
-                } @else if (hasError('lastName', 'textOnly')) {
-                  <span>{{ errorMessages.textOnly }}</span>
-                }
-              </mat-error>
-            }
-          </mat-form-field>
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('lastName'))"
+            label="Last name"
+            [errorMessages]="errorMessages"
+            [flexValue]="'1'"
+          ></app-reusable-form-field>
         </div>
 
         <div class="email-company-container">
-          <mat-form-field>
-            <mat-label>E-mail</mat-label>
-            <input matInput formControlName="email" />
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('email'))"
+            label="E-mail"
+            [errorMessages]="errorMessages"
+          ></app-reusable-form-field>
 
-            @if (isTouched('email')) {
-              <mat-error>
-                @if (hasError('email', 'required')) {
-                  <span>{{ errorMessages.required }}</span>
-                } @else if (hasError('email', 'email')) {
-                  <span>{{ errorMessages.email }}</span>
-                }
-              </mat-error>
-            }
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Company</mat-label>
-            <input matInput formControlName="company" />
-
-            @if (isTouched('company')) {
-              <mat-error>
-                @if (hasError('company', 'required')) {
-                  <span>{{ errorMessages.required }}</span>
-                } @else if (hasError('company', 'invalidCompanyName')) {
-                  <span>{{ errorMessages.invalidCompanyName }}</span>
-                }
-              </mat-error>
-            }
-          </mat-form-field>
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('company'))"
+            label="Company"
+            [errorMessages]="errorMessages"
+          ></app-reusable-form-field>
         </div>
 
         <div class="postal-country-container">
-          <mat-form-field class="postal-code">
-            <mat-label>Postal code</mat-label>
-            <input matInput formControlName="postalCode" />
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('postalCode'))"
+            label="Postal code"
+            className="postal-code"
+            [flexValue]="'1'"
+            [errorMessages]="errorMessages"
+          ></app-reusable-form-field>
 
-            @if (isTouched('postalCode')) {
-              <mat-error>
-                @if (hasError('postalCode', 'required')) {
-                  <span>{{ errorMessages.required }}</span>
-                } @else if (hasError('postalCode', 'invalidPostalCode')) {
-                  <span>{{ errorMessages.invalidPostalCode }}</span>
-                }
-              </mat-error>
-            }
-          </mat-form-field>
-
-          <mat-form-field class="country">
-            <mat-label>Country</mat-label>
-            <mat-select formControlName="country" required>
-              @for (country of countries; track country.code) {
-                <mat-option [value]="country.code">
-                  {{ country.name }}
-                </mat-option>
-              }
-            </mat-select>
-
-            <mat-error>
-              @if (hasError('country', 'required')) {
-                <span>{{ errorMessages.invalidCountrySelection }}</span>
-              }
-            </mat-error>
-          </mat-form-field>
+          <app-reusable-form-field
+            [control]="$any(contactForm.get('country'))"
+            label="Country"
+            className="country"
+            [flexValue]="'2'"
+            [isSelect]="true"
+            [selectOptions]="(countryOptions$ | async) || []"
+            [errorMessages]="errorMessages"
+          ></app-reusable-form-field>
         </div>
 
-        <mat-form-field class="telephone">
-          <mat-label>Telephone (optional)</mat-label>
-          <input matInput formControlName="telephone" />
+        <app-reusable-form-field
+          [control]="$any(contactForm.get('telephone'))"
+          label="Telephone"
+          [optional]="true"
+          className="telephone"
+          [errorMessages]="errorMessages"
+        ></app-reusable-form-field>
 
-          @if (isTouched('telephone')) {
-            <mat-error>
-              @if (hasError('telephone', 'required')) {
-                <span>{{ errorMessages.required }}</span>
-              } @else if (hasError('telephone', 'invalidPhone')) {
-                <span>{{ errorMessages.invalidPhone }}</span>
-              }
-            </mat-error>
-          }
-        </mat-form-field>
-
-        <mat-form-field>
-          <mat-label>Message (optional)</mat-label>
-          <textarea matInput formControlName="message"></textarea>
-        </mat-form-field>
+        <app-reusable-form-field
+          [control]="$any(contactForm.get('message'))"
+          label="Message"
+          [optional]="true"
+          [isTextarea]="true"
+          [errorMessages]="errorMessages"
+        ></app-reusable-form-field>
 
         <p class="attach-file-title">File attachment (optional)</p>
 
@@ -136,31 +91,28 @@
             #fileInput
             type="file"
             hidden
+            accept="image/jpeg,image/png,application/pdf"
             (change)="handleFileSelection($event)"
           />
 
-          <button
-            class="select-file-btn"
-            mat-button
-            color="primary"
-            type="button"
-            (click)="fileInput.click()"
+          <app-reusable-button
+            className="select-file-btn"
+            [color]="'primary'"
+            (buttonClick)="fileInput.click()"
           >
             <mat-icon>upload_file</mat-icon>
             Select File
-          </button>
+          </app-reusable-button>
 
           @if (contactForm.get('file')?.value) {
             <p class="selected-file-name">
               {{ contactForm.get('file')?.value?.name }}
-              <button
-                class="delete-file-btn"
-                mat-icon-button
-                type="button"
-                (click)="deleteFile()"
+              <app-reusable-button
+                className="delete-file-btn"
+                (buttonClick)="deleteFile()"
               >
                 <mat-icon>delete</mat-icon>
-              </button>
+              </app-reusable-button>
             </p>
           }
 
@@ -184,27 +136,34 @@
           </p>
         </div>
 
-        @if (isTouched('agreement')) {
-          <mat-error class="terms-error">
-            @if (hasError('agreement', 'required')) {
-              <span>{{ errorMessages.requiredTrue }}</span>
-            }
-          </mat-error>
+        @if (
+          contactForm.get('agreement')?.touched &&
+          contactForm.get('agreement')?.hasError('required')
+        ) {
+          <p class="terms-error">
+            {{ errorMessages.requiredTrue }}
+          </p>
         }
 
         <div class="form-btns">
-          <button
-            class="cancel-btn"
-            (click)="closeDialog()"
-            mat-flat-button
-            type="button"
+          <app-reusable-button
+            className="cancel-btn"
+            (buttonClick)="closeDialog()"
           >
             Cancel
-          </button>
+          </app-reusable-button>
 
-          <button class="submit-btn" mat-flat-button type="submit">
-            Submit
-          </button>
+          <app-reusable-button
+            className="submit-btn"
+            type="submit"
+            [disabled]="!!(isSubmitting$ | async)"
+          >
+            @if (isSubmitting$ | async) {
+              Submitting...
+            } @else {
+              Submit
+            }
+          </app-reusable-button>
         </div>
       </form>
     </div>
