refactor(frontend): redesigned stage component to align with new design

--- a/libs/ui-components/src/stage/stage.component.html
+++ b/libs/ui-components/src/stage/stage.component.html
@@ -4,12 +4,13 @@
       <h1 class="stage-title">{{ 'stage.TITLE' | transloco }}</h1>
       <p class="stage-description">{{ 'stage.DESCRIPTION' | transloco }}</p>
     </div>
-    <div class="image-container">
-      <img
-        src="/imd-stage.png"
-        alt="Injection molding mechanical part"
-        class="stage-image"
-      />
+    <div class="stage-buttons">
+      <button class="stage-buttons__primary__btn">
+        <span>{{ 'stage.START_PROJECT' | transloco }}</span>
+      </button>
+      <button class="stage-buttons__secondary__btn">
+        <span>{{ 'stage.LEARN_MORE' | transloco }}</span>
+      </button>
     </div>
   </div>
 </section>
