--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -13,7 +13,7 @@
         <span>{{ 'toolbar.SIGNIN' | transloco }}</span>
       </button>
       <button class="header-toolbar__secondary__btn">
-        <span>{{ 'toolbar.LOGIN' | transloco }}</span>
+        <span>{{ 'toolbar.START_FOR_FREE' | transloco }}</span>
       </button>
       <button class="header-toolbar__lang__switcher" (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
