refactor(frontend): rearange landing page and model library components

--- a/libs/ui-components/src/landing-page/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/landing-page/toolbar/toolbar.component.html
@@ -12,10 +12,10 @@
       <button class="header-toolbar__primary__btn">
         <span>{{ 'toolbar.SIGNIN' | transloco }}</span>
       </button>
-      <button class="header-toolbar__secondary__btn">
+      <button  mat-button class="header-toolbar__secondary__btn">
         <span>{{ 'toolbar.START_FOR_FREE' | transloco }}</span>
       </button>
-      <button class="header-toolbar__lang__switcher" (click)="toggleOverlay()">
+      <button mat-button class="header-toolbar__lang__switcher" (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
       </button>
     </div>
