--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -10,8 +10,8 @@
               'footer.PHONE' | transloco
             }}</a>
           </div>
-          <button mat-button class="custom-button">
-            {{ 'footer.WRITE_A_MESSAGE' | transloco }}
+          <button (click)="openContactForm()" mat-button class="custom-button">
+            {{ 'footer.SCHEDULE_A_CALL' | transloco }}
           </button>
         </div>
       </section>
