--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
@@ -1,6 +1,5 @@
-<mat-form-field [class]="className" [ngStyle]="{ flex: flexValue }">
+<mat-form-field [class]="className">
   <mat-label>{{ label }}{{ optional ? ' (optional)' : '' }}</mat-label>
-
   @if (isSelect) {
     <mat-select [formControl]="control">
       @for (option of selectOptions; track option.value) {
