--- a/libs/ui-components/src/landing-page/stage/stage.component.html
+++ b/libs/ui-components/src/landing-page/stage/stage.component.html
@@ -5,7 +5,7 @@
       <p class="stage-description">{{ 'stage.DESCRIPTION' | transloco }}</p>
     </div>
     <div class="stage-buttons">
-      <button class="stage-buttons__primary__btn">
+      <button [routerLink]="['/library']" class="stage-buttons__primary__btn">
         <span>{{ 'stage.START_PROJECT' | transloco }}</span>
       </button>
       <button class="stage-buttons__secondary__btn">
