--- a/libs/ui-components/src/landing-page/stage/stage.component.scss
+++ b/libs/ui-components/src/landing-page/stage/stage.component.scss
@@ -11,11 +11,13 @@ $mobile-breakpoint: 768px;
     padding: 4rem 5rem;
     background-color: var(--mat-sys-on-primary);
     margin-bottom: 2rem;
+    border-bottom: 1px solid var(--mat-sys-outline);
+    border-top: 1px solid var(--mat-sys-outline);
   }
 
   &-content {
     max-width: $container-max-width;
-    margin: 0 auto;
+    margin: 10px auto;
     text-align: center;
   }
 
