refactor(frontend): refactor the folder structure and rename the footer component

--- a/apps/iaimc-frontend/src/styles/stylestheme.scss
+++ b/apps/iaimc-frontend/src/styles/stylestheme.scss
@@ -1,5 +1,3 @@
-
-
 /* Note: Color palettes are generated from primary: #7F00FF */
 html {
   /* CUSTOM VARIABLES */
@@ -12,9 +10,8 @@ html {
   --footer-main-background: #1e1925;
   --footer-border-color: #484848;
   --subscription-background: #262626;
-  --subscription-primary-color:#A1A1A1;
-  --footer-icon-background-color:#606060;
-
+  --subscription-primary-color: #a1a1a1;
+  --footer-icon-background-color: #606060;
 
   /* COLOR SYSTEM VARIABLES */
   color-scheme: light;
