--- a/libs/ui-components/src/landing-page/material-selection/material-selection.component.html
+++ b/libs/ui-components/src/landing-page/material-selection/material-selection.component.html
@@ -1,21 +1,30 @@
 <div class="material-selection">
   <h1 class="material-selection__title">{{ 'material.TITLE' | transloco }}</h1>
   <div class="material-selection__grid">
-    <mat-card class="material-card"  appearance="outlined" *ngFor="let material of materials">
+    @for (material of materials;track $index){
+    <mat-card
+      class="material-card"
+      appearance="outlined"
+    >
       <mat-card-content>
-        <div
-          class="material-card__checkbox">
+        <div class="material-card__checkbox">
           <mat-icon class="material-card__checkmark">check</mat-icon>
         </div>
         <mat-card-title class="material-card__title">
           {{ material.titleKey | transloco }}
         </mat-card-title>
         <div class="material-card__features">
-          <p class="material-card__feature" *ngFor="let featureKey of material.features">
-            {{ featureKey | transloco }}
-          </p>
+          @for ( featureKey of material.features; track $index) {
+            <p
+              class="material-card__feature"
+            >
+              {{ featureKey | transloco }}
+            </p>
+          }
+
         </div>
       </mat-card-content>
     </mat-card>
+    }
   </div>
 </div>
